example with check and link

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
     "use-places-autocomplete": "^4.0.0",
+    "use-query-params": "^2.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
