--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-redux": "^8.1.2",
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.2",
     "sort-by": "^1.2.0",
     "use-places-autocomplete": "^4.0.0",
     "use-query-params": "^2.2.1",
